[project]
name = "ragapp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "dashscope>=1.23.1",
    "dbutils>=3.1.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.52",
    "langchain-deepseek>=0.1.3",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "snowflake-id>=1.0.2",
    "uvicorn>=0.34.1",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
